2008-02-07  Tor Lillqvist  <tml@novell.com>

	* configure.in: Unfortunately the mingw implementations of
	C99-style snprintf and vsnprintf don't seem to be quite good
	enough, at least not in mingw-runtime-3.14. I don't know exactly
	what the problem is, but it is related to floating point
	formatting and decimal point vs. comma, and the symptoms show up
	in some dialogs in GIMP, presumably also elsewhere. The simple
	tests in AC_FUNC_VSNPRINTF_C99 and AC_FUNC_SNPRINTF_C99 aren't
	rigorous enough to notice, though. So preset
	ac_cv_func_vsnprintf_c99 and ac_cv_func_snprintf_c99 to "no".

2008-02-07 12:58:54  Tim Janik  <timj@imendio.com>

	* Makefile.am: fixed build order to build gobject after gmodule gthread
	so gobject tests can be threaded.

2008-02-07  Ryan Lortie  <desrt@desrt.ca>

	* glib/gmessages.h (g_error): add for(;;); after the g_log call so
	that GCC stops issuing false warnings about reachability  Bug #514920

2008-02-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/pcre/*: Update the internal copy of PCRE to 7.6

2008-02-06  Behdad Esfahbod  <behdad@gnome.org>

	* glib/pltcheck.sh: Skip g_bit_*().  Inline functions may end up with
	a local plt if the compiler doesn't support what we want.  Bug #514702

2008-02-06  Murray Cumming  <murrayc@murrayc.com>

	* glib/gconvert.c:
	* glib/pcre/pcre_internal.h: Fixed some minor typos in documentation.

2008-02-06  Christian Persch  <chpe@gnome.org>

	* gio/gdesktopappinfo.c: (ensure_dir):
	* gio/glocalfile.c: (g_local_file_query_filesystem_info),
	(g_local_file_read), (g_local_file_delete), (g_local_file_trash),
	(g_local_file_move):
	* gio/glocalfileinfo.c: (set_xattr), (_g_local_file_info_get),
	(_g_local_file_info_get_from_fd), (set_unix_mode),
	(set_unix_uid_gid), (set_symlink), (set_mtime_atime):
	* gio/glocalfileinputstream.c: (g_local_file_input_stream_read),
	(g_local_file_input_stream_skip),
	(g_local_file_input_stream_close),
	(g_local_file_input_stream_seek):