@@ -190,7 +190,7 @@ g_output_stream_write (GOutputStream  *stream,
   if (((gssize) count) < 0)
     {
       g_set_error (error, G_IO_ERROR, G_IO_ERROR_INVALID_ARGUMENT,
-		   _("Too large count value passed to %s"), __FUNCTION__);
+		   _("Too large count value passed to %s"), G_STRFUNC);
       return -1;
     }
 
@@ -645,7 +645,7 @@ g_output_stream_write_async (GOutputStream       *stream,
 					   user_data,
 					   G_IO_ERROR, G_IO_ERROR_INVALID_ARGUMENT,
 					   _("Too large count value passed to %s"),
-					   __FUNCTION__);
+					   G_STRFUNC);
       return;
     }
 
